changed the tablet photo

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand|Spectral');
 
 html {
-    background-color: rgb(215, 205, 205);
+    background-color:beige;
     font-family: 'Quicksand', sans-serif;
     font-size: 0.95em;
     line-height: 1.5em;
